2010-07-25  Donal K. Fellows  <dkf@users.sf.net>

	* lib/ttrace.tcl: [Bug 3033206]: Be careful with variables outside of
	procedures; Tcl's variable resolution rules can jump in if a variable
	is not declared, which can be at best surprising.
	Also rewrote the namespace serialization code to be more robust.

2010-05-31  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl.in: Fixed procedure collisions for Thread package by
	inlining the load command into the ifneeded script, as is standard for
	most binary packages. Tweaked the procedure for Ttrace a bit, as the
	result of [info commands] is a list, and using ::apply when possible.
	A named procedure is only a fallback.

2010-05-27  Andreas Kupries  <andreask@activestate.com>

	* lib/ttrace.tcl: Resynchronized version number with Thread.

2010-05-26  Andreas Kupries  <andreask@activestate.com>

	* generic/threadSpCmd.c (ThreadMutexObjCmd, ThreadRWMutexObjCmd):
	[Bug 3007426]: Dropped trailing commas in enum definitions which
	choked the strictly C89 AIX compiler.

2010-04-01 Zoran Vasiljevic <zv@archiware.com>

        * generic/tclXkeylist.c: Removed declaration of global TclX keylist
	commands.

2010-03-30 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.6 TAGGED FOR RELEASE (thread-2-6-6) ***

	* configure:              Redo for TEA 3.7
	* configure.in:

	* generic/tclThread.h:    Cosmetic changes for the inclusion
	* generic/threadCmd.c:    in standard Tcl distribution.
	* generic/threadPoolCmd.c:
	* generic/threadSpCmd.c:
	* generic/threadSvCmd.c:
	* generic/threadSvCmd.h:

2010-03-19   Jan Nijtmans <nijtmans@users.sourceforge.net>

        * generic/threadSpCmd.c: Silence gcc warning: dereferencing
        * .cvsignore:            type-punned pointer will break
				 strict-aliasing rules.
        * configure:             Regenerated using latest TEA

2009-08-19 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Implemented [tpool::suspend]